Fixed header alignment

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,10 +1,11 @@
 // VARIABLES
 $primary: #0ea5e9;
+$secondary: #03dac6;
 $on-primary: #ffffff;
 
-* {
-  border: 1px solid #222;
-}
+// * {
+//   border: 1px solid #222;
+// }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
