--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,105 +1,144 @@
-// NAVIGATION ITEMS
-.nav__items {
-  list-style-type: none;
-  padding: 0;
+// NAV
+.nav {
+  &__title {
+    padding-left: 42px;
+  }
 
-  li {
-    font-size: 1.25rem;
-    margin-bottom: 16px;
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    gap: 8px;
+  &__items {
+    list-style-type: none;
 
-    a {
-      text-decoration: none;
-      color: $on-primary;
-      display: inline-block;
-      margin-left: 16px;
+    li {
+      font-size: 1.25rem;
+      margin-bottom: 16px;
+      display: grid;
+      grid-template-columns: 1fr 5fr;
+      gap: 8px;
+
+      a {
+        text-decoration: none;
+        color: $on-primary;
+        display: inline-block;
+        margin-left: 16px;
+      }
+
+      i {
+        justify-self: flex-end;
+      }
     }
+  }
+
+  &__items:nth-of-type(2) {
+    margin-top: 60px;
+  }
+}
+// HEADER
+.header {
+  &__top {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr auto auto;
+    grid-auto-flow: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
 
     i {
       justify-self: flex-end;
     }
-  }
-}
-// ALIGN SECOND NAV ITEMS
-.nav__items:nth-of-type(2) {
-  margin-top: 60px;
-}
-// HEADER
-.container__header {
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-}
-// HEADER TOP
-.top {
-  display: grid;
-  grid-template-columns: auto 1fr repeat(3, auto);
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
 
-  input[type="search"] {
-    justify-self: flex-start;
-    width: 724px;
-  }
+    input[type="search"] {
+      width: 824px;
+    }
 
-  img {
-    width: 60px;
-    height: auto;
-    border-radius: 50%;
-  }
+    img {
+      width: 60px;
+      height: auto;
+      border-radius: 50%;
+      justify-self: flex-end;
+    }
 
-  h3 {
-    white-space: nowrap;
-  }
-}
-// HEADER BOTTOM
-.bottom {
-  display: flex;
-  align-items: center;
-  gap: 24px;
-  h2 {
-    flex-grow: 1;
-    span {
-      display: block;
-      font-size: 1rem;
+    h3 {
+      white-space: nowrap;
     }
   }
-  img {
-    width: 80px;
-    height: auto;
-    border-radius: 50%;
-  }
-  // HEADER BUTTON
-  button {
-    padding: 8px 24px;
-    background-color: $primary;
-    color: $on-primary;
-    cursor: pointer;
-    border: none;
-    border-radius: 20px;
-    &:hover {
-      background-color: lighten($primary, 5%);
+
+  &__bottom {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+
+    h2 {
+      flex-grow: 1;
+      span {
+        display: block;
+        font-size: 1rem;
+      }
+    }
+    img {
+      width: 80px;
+      height: auto;
+      border-radius: 50%;
+    }
+    button {
+      padding: 8px 24px;
+      background-color: $primary;
+      color: $on-primary;
+      cursor: pointer;
+      border: none;
+      border-radius: 20px;
+      &:hover {
+        background-color: lighten($primary, 5%);
+      }
     }
   }
 }
-// MAIN CONTAINER
-.container__main {
-  padding: 12px 24px;
-  background-color: rgba(185, 199, 209, 0.2);
-}
-// PROJECT CONTAINER
-.projects {
+// PROJECT
+.container__card {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: minmax(min-content, max-content);
+  grid-auto-rows: 1fr;
   gap: 12px;
-
+  // CARD CONTENT
   .card {
     background-color: #ffffff;
+    border-radius: 10px;
+    border-left: 10px solid $secondary;
+    padding: 24px;
+    display: grid;
+    h4 {
+      margin: 0 0 8px 0;
+    }
+    p {
+      margin: 0;
+    }
+    .buttons {
+      margin-top: 12px;
+      justify-self: flex-end;
+      align-self: flex-end;
+    }
+  }
+}
+// ANNOUNCEMENTS CONTAINER
+.announcements {
+  .container-card {
+    background-color: #ffffff;
+    border-radius: 12px;
+    padding: 12px 24px;
   }
 
-  h2 {
-    grid-column: 1 / 3;
+  .wrapper-card {
+    border-bottom: 1px solid #999999;
+  }
+
+  h5 {
+    margin-bottom: 0;
+  }
+
+  p {
+    margin-top: 0;
+    font-size: 0.8rem;
+  }
+
+  .wrapper-card:last-child {
+    border: none;
   }
 }
