--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,42 +1,43 @@
+// CONTAINER
 .container {
   display: grid;
   height: 100vh;
   grid-template-columns: max(300px, 15%) 1fr;
-  grid-template-rows: 1fr 4fr;
+  grid-auto-rows: min-content 1fr;
+}
 
-  &__header {
-    padding: 24px 48px;
-    grid-column: 2 / 3;
+// HEADER
+.header {
+  padding: 24px 48px;
+}
+
+// NAV
+.nav {
+  font-size: 1.5rem;
+  background-color: $primary;
+  color: $on-primary;
+  grid-row: 1 / 3;
+}
+
+// MAIN
+.main {
+  grid-row: 2 / 3;
+  background-color: rgba(185, 199, 209, 0.2);
+  padding: 12px 48px 48px 48px;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-auto-rows: 1fr 2fr;
+  gap: 12px;
+
+  & .projects {
+    grid-row: 1 / 2;
   }
 
-  &__nav {
-    font-size: 1.5rem;
-    background-color: $primary;
-    color: $on-primary;
-    grid-row: 1 / 3;
-
-    h2 {
-      margin-left: 24px;
-    }
+  & .announcements {
+    grid-row: 1 / 2;
   }
 
-  &__main {
+  & .trending {
     grid-row: 2 / 3;
-
-    // Main Content Grid
-    display: grid;
-    grid-template-columns: 4fr 1fr;
-
-    & .projects {
-      grid-row: 1 / 3;
-    }
-
-    & .announcements {
-      grid-row: 1 / 2;
-    }
-
-    & .trending {
-      grid-row: 2 / 3;
-    }
   }
 }
